--- a/favorites.html
+++ b/favorites.html
@@ -6,7 +6,11 @@
   </head>
   <body>
     <table>
-      <thead></thead>
+      <thead>
+        <td>First Name</td>
+        <td>Last Name</td>
+        <td>Favorite Animal</td>
+      </thead>
       <tr>
         <td></td>
         <td></td>
