--- a/favorites.html
+++ b/favorites.html
@@ -5,19 +5,16 @@
     <title>into to html lesson two</title>
   </head>
   <body>
-    <table>
+    <table border="2">
       <thead>
         <td>First Name</td>
         <td>Last Name</td>
         <td>Favorite Animal</td>
       </thead>
       <tr>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
+        <td>Roy</td>
+        <td>Chase</td>
+        <td>Wolves</td>
       </tr>
 
 
