added more rows and populated

--- a/favorites.html
+++ b/favorites.html
@@ -16,7 +16,16 @@
         <td>Chase</td>
         <td>Wolves</td>
       </tr>
-
+      <tr>
+        <td>Steve</td>
+        <td>Bosell</td>
+        <td>Lemur</td>
+      </tr>
+      <tr>
+        <td>Harvey</td>
+        <td>Weirman</td>
+        <td>Goat</td>
+      </tr>
 
 
     </table>
